| Bug #5276 | Views: SELECT hangs if view of a view of a view has an error | ||
|---|---|---|---|
| Submitted: | 28 Aug 2004 1:52 | Modified: | 6 Sep 2004 13:54 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[28 Aug 2004 1:52]
Peter Gulutzan
[28 Aug 2004 6:20]
MySQL Verification Team
Verified with latest BK source. Thank you for the bug report.
[2 Sep 2004 6:42]
Oleksandr Byelkin
ChangeSet 1.1746 04/09/02 07:40:48 bell@sanja.is.com.ua +3 -0 fixed bug handling in views (BUG#5276)
[6 Sep 2004 13:54]
Oleksandr Byelkin
Thank you for bugreport! Bugfix is pushed intou MySQL server 5.0 source repository.
