fixed bug handling in views (BUG#5276)

mysql-test/r/view.result:
  bug handlimg from VIEWs
mysql-test/t/view.test:
  bug handlimg from VIEWs
sql/sql_base.cc:
  fixed bug handling in views